[package]
name = "embassy-nxp"
version = "0.1.0"
edition = "2021"
flavors=[{name = "lpc55", target = "thumbv8m.main-none-eabihf" , features = ["lpc55"]},]

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.0"
critical-section = "1.1.2"
embassy-hal-internal = { version = "0.2.0", path = "../embassy-hal-internal", features = ["cortex-m", "prio-bits-2"] }
embassy-sync = { version = "0.7.0", path = "../embassy-sync" }
lpc55-pac ={version="0.5.0", optional=true}
defmt = { version = "1.0.1", optional = true }

embassy-time-driver = { version = "0.2", path = "../embassy-time-driver", features = ["tick-hz-32_768"] }
embassy-time-queue-utils = { version = "0.1", path = "../embassy-time-queue-utils" }
embassy-time = { version = "0.4.0", path = "../embassy-time",  features = ["defmt", "tick-hz-32_768"]}

[features]
default = ["rt"]
rt = ["lpc55-pac/rt"]
lpc55=["dep:lpc55-pac"]

## Enable [defmt support](https://docs.rs/defmt) and enables `defmt` debug-log messages and formatting in embassy drivers.
defmt = ["dep:defmt", "embassy-hal-internal/defmt", "embassy-sync/defmt"]
